--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ border-bottom: 1px solid white;
 }
 .banner{
   height: 100vh;
-  background-image: url(img/1860X1050-mack-trucks\ 1\ 1.png);
+  background-image: url(1860X1050-mack-trucks\ 1\ 1.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
